dashboard monthanme and year nowrap and nbsp to prevent linebreak

--- a/src/app/components/termin/dashboard/dashboard.component.scss
+++ b/src/app/components/termin/dashboard/dashboard.component.scss
@@ -162,7 +162,6 @@ $handleLength: 25px;
     border-bottom-left-radius: 15px;
     border-top-right-radius: 15px;
     white-space: nowrap;
-    min-width: 200px;
   }
 }
 
